on my start screen page or basically my main index page where the game starts I moved my gif image of the dancing stick figure into my welcome div class and removed the div class that I originally had for the stick figure. I did this to prevent the gif from jumping to the bottom of the page when switching the browser into fullscreen mode

--- a/styles/main.css
+++ b/styles/main.css
@@ -77,7 +77,7 @@
 }
 
 /*This is the class for the welcome header that is on the "start_game" page*/
-.welcome-title {
+.welcome {
     float: left;
     color: yellow;
 }
